--- a/Index.html
+++ b/Index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Alarm Clock.css">
-    <script src="Alarmclock.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
-<body>
-    <main>
-        <div class="clock-circle">
-            <div class="clock-face">
-            <div class="hand hour-hand">
-                <div class="hr"></div>
-            </div>
-            
-            <div class="hand min-hand">
-                <div class="mn" id="mn"></div>
-            </div>
-
-                <div class="hand second-hand">
-                    <div class="sc" id="sc"></div>
-                </div>
-                
-        </div>
-    </div>
-
-    <div class="Alarm">
-        <div id="clock"></div>
-    </div>
-</main>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="Alarm Clock.css"> <script src="Alarmclock.js"></script> <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet"> <title>Document</title></head><body> <main> <div class="clock-circle"> <div class="clock-face"> <div class="hand hour-hand"> <div class="hr"></div></div><div class="hand min-hand"> <div class="mn" id="mn"></div></div><div class="hand second-hand"> <div class="sc" id="sc"></div></div></div></div><div class="Alarm"> <div id="clock"></div></div></main></body></html>
